--- a/src/Compoments/Button/Button.css
+++ b/src/Compoments/Button/Button.css
@@ -15,7 +15,7 @@
     font-size: 15px;
     line-height: 20px;
     letter-spacing: 0.0125em;
-    gap: 12px;
+    /* gap: 12px; */
     color: #FFFFFF;
     border: none;
     cursor: pointer;
